--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "axios": "^1.7.1",
     "crypto": "^1.0.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.13",
     "otp-generator": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
