--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "axios": "^1.7.1",
+    "chart.js": "^4.4.3",
+    "country-state-city": "^3.2.1",
     "crypto": "^1.0.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.6",
@@ -19,13 +21,17 @@
     "jwt-decode": "^4.0.0",
     "otp-generator": "^4.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5"
+    "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
