--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.3",
     "country-state-city": "^3.2.1",
     "crypto": "^1.0.1",
+    "driver.js": "^1.3.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
